# mlops_project_habr

./: .pre-commit-config.yaml  README.md  data.dvc  get_data.py  main.py  pyproject.toml
conf/: config.yaml
habr_articles_classifier/: model.py  module.py  train.py  utils.py
