[project]
name = "mlops-project"
version = "0.1.0"
description = "Habr articles classifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.64.2",
    "fastparquet>=2024.11.0",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "prettier>=0.0.7",
    "pyarrow>=22.0.0",
    "pytorch-lightning>=2.6.0",
    "ruff>=0.14.8",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP"
]
ignore = []

# автоисправление в случае ошибок
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.prettier]
printWidth = 80
proseWrap = "always"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
